@@ -3,6 +3,7 @@ Release 5.3.0 (not yet released)
 
  * Adds Ubuntu 18.04 "Bionic" packages.
  * Fuse Panel support: fixes a crash that occurs when you shut down Passenger right after it fails to connect to Fuse Panel.
+ * [Apache] Updates the recommended package for apache dev headers on debian >= 9.4. Closes GH-2048.
 
 
 Release 5.2.3
